Bug 1447191 - Pass loadFlags when creating FTP IPDL channel r=mayhemer

This fixes the "Assertion failure: PermissionAvailable(prin, aType), at nsPermissionManager.cpp:2341 when loading FTP URLs on debug builds"

MozReview-Commit-ID: 4eRGQ3hrUWo